INCOMPATIBILITY.

* The monadic bind operator on each powerdomain has new binder syntax
similar to sets, e.g. '\<Union>\<sharp>x\<in>xs. t' represents
'upper_bind\<cdot>xs\<cdot>(\<Lambda> x. t)'.

* The infix syntax for binary union on each powerdomain has changed
from e.g. '+\<sharp>' to '\<union>\<sharp>', for consistency with set
syntax. INCOMPATIBILITY.

* Renamed some theorems (the original names are also still available).
  expand_fun_below   ~> fun_below_iff
  below_fun_ext      ~> fun_belowI
  expand_cfun_eq     ~> cfun_eq_iff
  ext_cfun           ~> cfun_eqI
  expand_cfun_below  ~> cfun_below_iff
  below_cfun_ext     ~> cfun_belowI
  cont2cont_Rep_CFun ~> cont2cont_APP

* The Abs and Rep functions for various types have changed names.
Related theorem names have also changed to match. INCOMPATIBILITY.
  Rep_CFun  ~> Rep_cfun
  Abs_CFun  ~> Abs_cfun
  Rep_Sprod ~> Rep_sprod
  Abs_Sprod ~> Abs_sprod
  Rep_Ssum  ~> Rep_ssum
  Abs_Ssum  ~> Abs_ssum

* Lemmas with names of the form *_defined_iff or *_strict_iff have
been renamed to *_bottom_iff. INCOMPATIBILITY.

* Various changes to bisimulation/coinduction with domain package:
  - Definitions of 'bisim' constants no longer mention definedness.
  - With mutual recursion, 'bisim' predicate is now curried.
  - With mutual recursion, each type gets a separate coind theorem.
  - Variable names in bisim_def and coinduct rules have changed.
INCOMPATIBILITY.

* Case combinators generated by the domain package for type 'foo' are
now named 'foo_case' instead of 'foo_when'. INCOMPATIBILITY.

* Several theorems have been renamed to more accurately reflect the
names of constants and types involved. INCOMPATIBILITY.
  thelub_const    ~> lub_const
  lub_const       ~> is_lub_const
  thelubI         ~> lub_eqI
  is_lub_lub      ~> is_lubD2
  lubI            ~> is_lub_lub
  unique_lub      ~> is_lub_unique
  is_ub_lub       ~> is_lub_rangeD1
  lub_bin_chain   ~> is_lub_bin_chain
  lub_fun         ~> is_lub_fun